[package]

name = "flavortown"
description = "A consensus datastore for the people; spaghetti and meatballs"
version = "0.0.1"
authors = [
  "Tyler Neely <t@jujit.su>",
  "Steve Salevan <steve.salevan@gmail.com>"
]
license = "Apache-2.0"

[dependencies]
docopt = "0.6.66"
log = "0.3.1"
time = "0.1"
rustc-serialize = "0.3.15"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.mio]
git = "https://github.com/carllerche/mio.git"
