[package]

name = "rasputin"
description = "Hard to kill transactional distributed database"
version = "0.0.1"
authors = [
  "Tyler Neely <t@jujit.su>",
  "Steve Salevan <steve.salevan@gmail.com>"
]
license = "Apache-2.0"
homepage = "https://github.com/the-tetanus-clinic/rasputin"
keywords = ["database", "HA", "transactions", "distributed-systems"]

[dependencies]
docopt = "0.6.66"
log = "0.3.1"
time = "0.1"
rustc-serialize = "0.3.15"
mio = "0.4.2"
bytes = "0.2.11"
rand = "0.3"
lazy_static="0.1.14"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[dev-dependencies]
quickcheck = "*"
