[package]

name = "rasputin"
description = "Hard to kill transactional distributed database"
version = "0.2.0"
authors = [
  "Tyler Neely <t@jujit.su>",
  "Steve Salevan <steve.salevan@gmail.com>"
]
license = "Apache-2.0"
homepage = "https://github.com/the-tetanus-clinic/rasputin"
keywords = ["database", "HA", "transactions", "distributed-systems", "paxos"]

[[test]]

name = "test"
path = "test/test.rs"

[dependencies]
bytes = "0.2.11"
docopt = "0.6.66"
lazy_static="0.1.14"
log = "0.3.1"
mio = "0.4.2"
rand = "0.3"
rocksdb = "~0.1.1"
rustc-serialize = "0.3.15"
time = "0.1"
uuid = "0.1"
protobuf = "1.0.16"
threadpool = "0.1.4"

[dev-dependencies]
quickcheck = "*"
